update all logic service